--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
 <h2 id="title">Welcome to Ember.js</h2>
 
 {{outlet}}
+
+<p>
+  {{link-to 'Sign in' 'auth.signin'}}
+  or
+  {{link-to 'Sign up' 'auth.signup'}}
+</p>
